--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "gulp-jshint": "^1.10.0"
   },
   "dependencies": {
+    "del": "^1.1.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.2.0"
   }
 }
