--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "del": "^1.1.1",
     "gulp-concat": "^2.5.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "gulp-version-number": "^0.1.4"
   }
 }
