--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "fs": "0.0.2",
     "gulp-header": "^1.2.2",
-    "gulp-jshint": "^1.10.0"
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3"
   },
   "dependencies": {
     "del": "^1.1.1",
